<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_height"
                android:onClick="startInspectionActivity"
                android:text="@string/category_diagnostics"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="@dimen/category_max_width" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:onClick="startGarageActivity"
                android:text="@string/category_garage"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintWidth_max="@dimen/category_max_width" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_height"
                android:layout_marginTop="8dp"
                android:onClick="startCalendarActivity"
                android:text="@string/category_calendar"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                app:layout_constraintWidth_max="@dimen/category_max_width" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_height"
                android:layout_marginBottom="8dp"
                android:onClick="startBudgetActivity"
                android:text="@string/category_expenses"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                app:layout_constraintWidth_max="@dimen/category_max_width" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>